--- a/session/config_255674028793.json
+++ b/session/config_255674028793.json
@@ -1,5 +1,5 @@
 {
-  "AUTO_VIEW_STATUS": "false",
+  "AUTO_VIEW_STATUS": "true",
   "AUTO_LIKE_STATUS": "true",
   "AUTO_REACT": "true",
   "AUTO_RECORDING": "false",
